[package]
name = "hex-wars-backend"
version = "0.1.0"
authors = ["Nikos Filippakis <aesmade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rand = "0.7"
serde = { version = "1.0.40", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
